packages/frontend/app/styles/components/learner-group/instructor-manager.scss
@use "../../ilios-common/mixins" as m;

.learner-group-instructor-manager {
  @include m.detail-container(var(--orange));

  .detail-header {
    @include m.detail-container-header;

    .title {
      @include m.detail-container-title;
    }

    .actions {
      flex-grow: 1;
      @include m.detail-container-actions;

      .user-search {
        flex-grow: 1;
        padding-left: 1rem;
        padding-right: 1rem;
        input {
          width: 100%;
        }
      }
    }
  }

  .detail-content {
    .removable-instructors {
      @include m.ilios-removable-list;
      margin-bottom: 1rem;
    }

    .removable-instructor-group {
      & > span {
        background-color: var(--lightest-grey);
        border-radius: 4px;
        cursor: pointer;
        font-weight: 600;
        padding: 0.2rem 0.4rem 0.2rem 0.6rem;
        vertical-align: middle;

        .fa-users {
          margin-right: 0.5rem;
        }
        .remove {
          margin-left: 0.5rem;
        }
      }
      margin: 1rem 0;
    }
  }
}

